проставление действий по дням и вывод результатов общих

--- a/WebUI/ClientApp/src/app/manager-rm/clients/containers/clients/clients.component.html
+++ b/WebUI/ClientApp/src/app/manager-rm/clients/containers/clients/clients.component.html
@@ -7,5 +7,6 @@
     (tripPlanCompletedTypeUpdated)="updateTripPlanCompletedType($event)"
     (weekPlanUpdated)="updateWeekPlan($event)"
     (weekPlanCreated)="createWeekPlan($event)"
-    (weekPlanFactAdded)="addFactToWeekPlan($event)">
+    (weekPlanFactAdded)="addFactToWeekPlan($event)"
+    (callsDateCreated)="createCallsDate($event)">
 </app-client-list>
