--- a/WebUI/Views/Account/Index.cshtml
+++ b/WebUI/Views/Account/Index.cshtml
@@ -26,7 +26,94 @@
     <meta name="theme-color" content="#000">
     <!-- Custom Browsers Color End -->
 
-    <link rel="stylesheet" href="@Url.Content("~/app/css/main.min.css")">
+    <style>
+        body, html {
+            margin: 0px;
+            padding: 0px;
+            width: 100%; 
+            height: 100%;
+            font-size: 16px;
+            min-width: 320px;
+            position: relative;
+            line-height: 1.65;
+            overflow-x: hidden;
+        }
+
+        .button {
+            background-color: inherit;
+            border-radius: 15px;
+            padding: 0.7rem 1.1rem;
+            border: none;
+            cursor: pointer
+        }
+
+        .button-default {
+            background-color: #03a9f4;
+            color: #fff;
+            transition: 0.3s
+        }
+
+        .button-default :hover {
+            background-color: #007ac1
+        }
+            
+
+        .login-wrapper {
+            float: right;
+            background-color: #fff;
+            width: 30vw;
+            min-height: 100vh;
+            position: relative
+        }
+
+        .form-wrapper {
+            width: 100%;
+            text-align: center;
+            position: absolute;
+            top: 5%;           
+        }
+
+        h1 {
+            font-weight: normal;
+        }
+        
+        .form-control {
+            width: 75%;
+            padding: .7rem 1.1rem;
+            border: none;
+            border-bottom: 1px solid #e6e6e6;
+            transition: 0.5s;
+        }
+
+        .form-control :focus {
+            border-bottom: 1px solid #03a9f4
+        }
+
+        .img-responsive {
+            display: block;
+            max-width: 100%;
+            height: auto;
+        }
+            
+        img {
+            width: 100%
+        }
+
+        .m-b20 {
+            margin-bottom: 20px
+        }
+
+
+        .m-b40 {
+            margin-bottom: 40px
+        }
+        
+        .form-group {
+            width: 100%;
+        }
+            
+
+    </style>
 
 </head>
 
@@ -39,7 +126,7 @@
         <div class="form-wrapper">
             <form method="post" action="/Account/Login">
                 <h1>Вход в систему</h1>
-                <img class="img-responsive" src="~/app/img/face-control.png" />
+                <img class="img-responsive" src="~/assets/face-control.png" />
                 <div class="form-group m-b20">
                     <input type="text" class="form-control" placeholder="Имя пользователя" name="login"/>
                 </div>
@@ -51,7 +138,7 @@
         </div>
     </div>
 
-    <script src="@Url.Content("~/app/js/scripts.min.js")"></script>
+    
 
 </body>
 </html>
