--- a/WebUI/ClientApp/src/app/manager-rm/clients/dialogs/calls-dates-dialog/calls-dates-dialog.component.sass
+++ b/WebUI/ClientApp/src/app/manager-rm/clients/dialogs/calls-dates-dialog/calls-dates-dialog.component.sass
@@ -65,3 +65,10 @@ table
     border: none
     padding: 15px 35px
     cursor: pointer
+
+.dialog-actions
+    position: absolute
+    bottom: 10px
+    left: 40%
+    button
+        margin-right: 10px
