--- a/WebUI/ClientApp/src/app/manager-rm/clients/containers/clients/clients.component.html
+++ b/WebUI/ClientApp/src/app/manager-rm/clients/containers/clients/clients.component.html
@@ -8,5 +8,7 @@
     (weekPlanUpdated)="updateWeekPlan($event)"
     (weekPlanCreated)="createWeekPlan($event)"
     (weekPlanFactAdded)="addFactToWeekPlan($event)"
-    (callsDateCreated)="createCallsDate($event)">
+    (callsDateCreated)="createCallsDate($event)"
+    (callPlanCreated)="createCallPlan($event)"
+    (tripPlanCreated)="createTripPlan($event)">
 </app-client-list>
