--- a/WebUI/ClientApp/src/styles.sass
+++ b/WebUI/ClientApp/src/styles.sass
@@ -23,3 +23,11 @@ ul
 a
     color: inherit
     text-decoration: none
+
+input:focus 
+    outline: none !important
+    border: 1px solid #E9F3FF !important
+
+select:focus
+    outline: none !important
+    border: 1px solid #E9F3FF !important
