--- a/WebUI/ClientApp/src/app/manager-rm/clients/components/client-list/client-list.component.html
+++ b/WebUI/ClientApp/src/app/manager-rm/clients/components/client-list/client-list.component.html
@@ -4,7 +4,7 @@
     <button class="addEntity" (click)="openCreateClientForm()">+ Добавить клиента</button>
   </mat-card-header>
   <mat-card-content>
-      <table mat-table [dataSource]="clients">
+      <table mat-table [dataSource]="clients" [trackBy]="getTrackBy">
         
           <ng-container matColumnDef="title">
             <th mat-header-cell *matHeaderCellDef>Название</th>
@@ -163,6 +163,8 @@
           <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
           <tr mat-row *matRowDef="let row; columns: displayedColumns;" (dblclick)="openEditClientForm(row)"></tr>
         </table>
+
+        
   </mat-card-content>
 </mat-card>
 
