--- a/WebUI/ClientApp/src/app/manager-rm/clients/dialogs/week-plans/week-plans-dialog.component.sass
+++ b/WebUI/ClientApp/src/app/manager-rm/clients/dialogs/week-plans/week-plans-dialog.component.sass
@@ -38,6 +38,11 @@ h3
         display: inline-block
         color: #E79B9B
 
+.mat-dialog-content
+    margin: 0
+    padding: 0
+    max-height: 75vh
+
 .dialog-body
     display: grid
     grid-template-columns: 1fr 1fr
@@ -100,6 +105,8 @@ table
     margin-bottom: 20px
     display: inline-block
 
+.dialog-actions
+    margin-top: 20px
 
       
 
