--- a/WebUI/ClientApp/src/app/admin/admin.component.html
+++ b/WebUI/ClientApp/src/app/admin/admin.component.html
@@ -6,6 +6,7 @@
     <ul>
       <li><a [routerLink]="[ 'clients' ]" routerLinkActive="active">Клиенты</a></li>     
       <li><a [routerLink]="[ 'managers' ]" routerLinkActive="active">Менеджеры</a></li>  
+      <li><a [routerLink]="[ 'workgroups' ]" routerLinkActive="active">Рабочие группы</a></li> 
     </ul>
   </nav>
 </mat-toolbar>
