--- a/WebUI/ClientApp/src/app/admin/clients/containers/clients/clients.component.html
+++ b/WebUI/ClientApp/src/app/admin/clients/containers/clients/clients.component.html
@@ -1,1 +1,5 @@
-<app-client-list [clients]="clients$ | async"></app-client-list>
+<app-client-list 
+    [clients]="clients$ | async" 
+    (clientCreated)="createClient($event)"
+    (clientUpdated)="updateClient($event)">
+</app-client-list>
