--- a/WebUI/ClientApp/src/app/admin/managers/containers/managers/managers.component.html
+++ b/WebUI/ClientApp/src/app/admin/managers/containers/managers/managers.component.html
@@ -1,1 +1,5 @@
-<app-managers-list [managers]="managers$ | async"></app-managers-list>
+<app-managers-list 
+    [managers]="managers$ | async"
+    (managerCreated)="createManager($event)">
+
+</app-managers-list>
