Добавил вывод рабочей группы у манагеров

--- a/WebUI/ClientApp/src/app/admin/managers/components/managers-list/managers-list.component.sass
+++ b/WebUI/ClientApp/src/app/admin/managers/components/managers-list/managers-list.component.sass
@@ -72,3 +72,24 @@ th
 
     &:nth-child(2n)
         background-color: #fafbfd
+
+.detail
+    width: 100%
+    border-radius: 99px
+    background: rgba(238, 246, 255, 0.46)  
+    padding: 10px 35px
+    border: none
+    cursor: pointer
+    &:hover
+        background: rgba(149, 199, 255, 0.46)
+
+.workgroup
+    width: 100%
+    border-radius: 99px
+    background: #E9F3FF  
+    padding: 10px 35px
+    border: none
+    cursor: pointer
+    &:hover
+        background: #ADD4FF
+        color: #fff
