редактирование и подробный просмотр манагера

--- a/WebUI/ClientApp/src/app/admin/managers/containers/managers/managers.component.html
+++ b/WebUI/ClientApp/src/app/admin/managers/containers/managers/managers.component.html
@@ -1,5 +1,5 @@
 <app-managers-list 
     [managers]="managers$ | async"
-    (managerCreated)="createManager($event)">
-
+    (managerCreated)="createManager($event)"
+    (managerUpdated)="updateManager($event)">
 </app-managers-list>
