--- a/WebUI/ClientApp/src/app/admin/managers/components/managers-list/managers-list.component.html
+++ b/WebUI/ClientApp/src/app/admin/managers/components/managers-list/managers-list.component.html
@@ -26,7 +26,7 @@
       <ng-container matColumnDef="action">
           <th mat-header-cell *matHeaderCellDef></th>
           <td mat-cell *matCellDef="let row">
-            <button class="detail" >Подробнее</button>
+            <button class="detail" (click)="openManagerDetail(row)" >Подробнее</button>
           </td>
         </ng-container>
       <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
