--- a/WebUI/ClientApp/src/app/admin/workgroups/containers/workgroups/workgroups.component.html
+++ b/WebUI/ClientApp/src/app/admin/workgroups/containers/workgroups/workgroups.component.html
@@ -1,5 +1,7 @@
 <app-workgroups-list 
     [workgroups]="workgroups$ | async" 
     [freeClients]="freeClients$ | async"
-    (clientAddedToWorkgroup)="addClientToWorkGroup($event)">
+    [freeManagers]="freeManagers$ | async"
+    (clientAddedToWorkgroup)="addClientToWorkGroup($event)"
+    (workgroupCreated)="createWorkgroup($event)">
 </app-workgroups-list>
