--- a/WebUI/ClientApp/src/app/admin/workgroups/components/workgroups-list/workgroups-list.component.html
+++ b/WebUI/ClientApp/src/app/admin/workgroups/components/workgroups-list/workgroups-list.component.html
@@ -1,7 +1,7 @@
 <mat-card class="mat-elevation-z1">
   <mat-card-header>
     <mat-card-title class="card-title">Рабочие группы</mat-card-title>
-    <button class="addEntity" >+ Добавить группу</button>
+    <button class="addEntity" (click)="openWorkgroupCreate()" >+ Добавить группу</button>
   </mat-card-header>
   <mat-card-content>
     <div class="workgroups-wrapper">
