--- a/WebUI/ClientApp/src/app/admin/workgroups/dialogs/detail-workgroup-dialog/detail-workgroup-dialog.component.html
+++ b/WebUI/ClientApp/src/app/admin/workgroups/dialogs/detail-workgroup-dialog/detail-workgroup-dialog.component.html
@@ -11,7 +11,7 @@
     <p>Региональный менеджер</p>
   </div> 
   <div style="background-color: #E2F7FF">
-    <button class="back" (click)="openManagerEdit()">Редактирование</button>
+    <button class="back" (click)="openWorkgroupEdit()">Редактирование</button>
   </div>
 </div>
 
