--- a/WebUI/ClientApp/src/app/admin/workgroups/containers/workgroups/workgroups.component.html
+++ b/WebUI/ClientApp/src/app/admin/workgroups/containers/workgroups/workgroups.component.html
@@ -3,5 +3,6 @@
     [freeClients]="freeClients$ | async"
     [freeManagers]="freeManagers$ | async"
     (clientAddedToWorkgroup)="addClientToWorkGroup($event)"
-    (workgroupCreated)="createWorkgroup($event)">
+    (workgroupCreated)="createWorkgroup($event)"
+    (workgroupChanged)="updateWorkgroup($event)">
 </app-workgroups-list>
