Убрал заглушки с количества звонков по манагерам в воркгруппах + сделал создание клиент контакта на манагера

--- a/WebUI/ClientApp/src/app/admin/workgroups/components/workgroups-list/workgroups-list.component.html
+++ b/WebUI/ClientApp/src/app/admin/workgroups/components/workgroups-list/workgroups-list.component.html
@@ -27,13 +27,13 @@
             </thead>
             <tbody>
               <tr>
-                <td>15</td>
+                <td>{{getAmountContactsToday(workgroup.escortManager.id)}}</td>
                 <td>МС</td>
                 <td>{{workgroup.escortManager.login}}</td>
                 <td>36%</td>
               </tr>
               <tr>
-                <td>15</td>
+                <td>{{getAmountContactsToday(workgroup.regionalManager.id)}}</td>
                 <td>РМ</td>
                 <td>{{workgroup.regionalManager.login}}</td>
                 <td>36%</td>
