--- a/WebUI/ClientApp/src/app/admin/workgroups/containers/workgroups/workgroups.component.html
+++ b/WebUI/ClientApp/src/app/admin/workgroups/containers/workgroups/workgroups.component.html
@@ -2,6 +2,7 @@
     [workgroups]="workgroups$ | async" 
     [freeClients]="freeClients$ | async"
     [freeManagers]="freeManagers$ | async"
+    [clientContacts]="clientContacts$ | async"
     (clientAddedToWorkgroup)="addClientToWorkGroup($event)"
     (workgroupCreated)="createWorkgroup($event)"
     (workgroupChanged)="updateWorkgroup($event)">
