--- a/WebUI/ClientApp/src/app/admin/clients/components/client-list/client-list.component.sass
+++ b/WebUI/ClientApp/src/app/admin/clients/components/client-list/client-list.component.sass
@@ -14,10 +14,16 @@
 .textInputField
     height: 27px
 
+table
+    table-layout: fixed
+
 td
     padding-left: 15px !important
     padding-right: 5px !important
     border-bottom: none
+    white-space:nowrap
+    overflow:hidden
+    text-overflow:ellipsis
 
 th 
     padding-left: 15px !important
