--- a/WebUI/ClientApp/src/app/admin/managers/components/managers-list/managers-list.component.html
+++ b/WebUI/ClientApp/src/app/admin/managers/components/managers-list/managers-list.component.html
@@ -16,7 +16,7 @@
       <ng-container matColumnDef="workgroupTitle">
         <th mat-header-cell *matHeaderCellDef> Рабочая группа </th>
         <td mat-cell *matCellDef="let row">  
-            <button *ngIf="row.workgroupTitle != null" class="workgroup">{{row.workgroupTitle}}</button>
+            {{row.workgroupTitle}}
         </td>
       </ng-container>
       <ng-container matColumnDef="phone">
