--- a/WebUI/ClientApp/src/app/admin/workgroups/components/workgroups-calls-list/workgroups-calls-list.component.html
+++ b/WebUI/ClientApp/src/app/admin/workgroups/components/workgroups-calls-list/workgroups-calls-list.component.html
@@ -6,11 +6,8 @@
     <table>
       <thead>
         <tr>
-          <th colspan="5">
-            Название клиента
-          </th>
-          <th>
-            Тип
+          <th style="max-width: 100px">
+            Название 
           </th>
           <th *ngFor="let day of days">
             {{day}}
@@ -28,10 +25,9 @@
       </thead>
       <tbody>
         <tr *ngFor="let workgroupCalls of workgroupsCalls">
-          <td colspan="5">{{workgroupCalls.clientTitle}}</td>
-          <td>{{workgroupCalls.clientType}}</td>
+          <td style="max-width: 100px">{{workgroupCalls.clientTitle}}</td>
           <td *ngFor="let day of days">
-            <div *ngFor="let clientAction of getClientContactType(day, workgroupCalls.clientActions)" class="action-circle" [style.background]="getActionColor(clientAction.contactType)">
+            <div *ngFor="let clientAction of getClientContactType(day, workgroupCalls.clientActions, workgroupCalls.clientId)" class="action-circle" [style.background]="getActionColor(clientAction.contactType)">
             </div>
           </td>
           <td colspan="2">
