--- a/WebUI/ClientApp/src/app/admin/workgroups/components/workgroups-calls-list/workgroups-calls-list.component.sass
+++ b/WebUI/ClientApp/src/app/admin/workgroups/components/workgroups-calls-list/workgroups-calls-list.component.sass
@@ -20,6 +20,9 @@ td
     padding: 10px 5px 10px 10px !important
     border-bottom: none
     vertical-align: middle
+    white-space:nowrap
+    overflow:hidden
+    text-overflow:ellipsis
 
 th 
     padding: 20px 5px 20px 10px !important
