--- a/WebUI/ClientApp/src/app/admin/workgroups/components/workgroups-list/workgroups-list.component.sass
+++ b/WebUI/ClientApp/src/app/admin/workgroups/components/workgroups-list/workgroups-list.component.sass
@@ -33,6 +33,7 @@
     .workgroup-item
         background: rgba(208, 230, 252, 0.3)
         border-radius: 20px
+        margin-bottom: 20px
         .workgroup-title
             padding: 20px 25px
             font-size: 18px
