--- a/WebUI/ClientApp/src/app/admin/workgroups/components/workgroups-plans-list/workgroup-plans-list.component.sass
+++ b/WebUI/ClientApp/src/app/admin/workgroups/components/workgroups-plans-list/workgroup-plans-list.component.sass
@@ -16,9 +16,15 @@ tr
 .textInputField
     height: 27px
 
+table
+    table-layout: fixed
+
 td
     padding: 10px 5px 10px 10px
     border-bottom: none
+    white-space:nowrap
+    overflow:hidden
+    text-overflow:ellipsis
 
 th 
     padding: 20px 5px 20px 10px
