--- a/WebUI/ClientApp/src/app/admin/managers/dialogs/detail-manager-dialog/detail-manager-dialog.component.html
+++ b/WebUI/ClientApp/src/app/admin/managers/dialogs/detail-manager-dialog/detail-manager-dialog.component.html
@@ -6,7 +6,7 @@
     <h3>{{data.login}}</h3>
   </div>
   <div>
-    <small>{{data.workgroupTitle}}</small>
+    <small>{{!data.workgroupTitle ? 'Рабочая группа отсутствует' :  data.workgroupTitle}}</small>
   </div> 
   <div>
     <button class="back" (click)="openManagerEdit()">Редактирование</button>
