--- a/WebUI/ClientApp/src/app/manager-rm/clients/components/client-list/client-list.component.html
+++ b/WebUI/ClientApp/src/app/manager-rm/clients/components/client-list/client-list.component.html
@@ -8,7 +8,7 @@
         
           <ng-container matColumnDef="title">
             <th mat-header-cell *matHeaderCellDef>Название</th>
-            <td mat-cell *matCellDef="let element" style="color: #324A60">{{element.title}} </td>
+            <td mat-cell *matCellDef="let element" style="color: #324A60" style="max-width: 300px">{{element.title}} </td>
           </ng-container>
 
           <ng-container matColumnDef="phone">
