крушочки для викпланов

--- a/WebUI/ClientApp/src/app/admin/workgroups/components/workgroups-plans-list/workgroup-plans-list.component.html
+++ b/WebUI/ClientApp/src/app/admin/workgroups/components/workgroups-plans-list/workgroup-plans-list.component.html
@@ -63,6 +63,12 @@
               <div *ngIf="getWeekPlan(1, workgroupPlan.escortManagerPlans)">
                 <div class="action-circle" *ngIf="getWeekPlan(1, workgroupPlan.escortManagerPlans).fact != ''" style="background-color: #D5E3EB"></div>
               </div>
+              <div *ngIf="!getWeekPlan(1, workgroupPlan.escortManagerPlans)">
+                <div class="action-circle" style="background-color: #e5e5e5"></div>
+              </div>
+              <div *ngIf="!getWeekPlan(1, workgroupPlan.escortManagerPlans)">
+                <div class="action-circle" style="background-color: #e5e5e5"></div>
+              </div>
             </td>
             <td>
               <div *ngIf="getWeekPlan(2, workgroupPlan.escortManagerPlans)">
@@ -70,6 +76,12 @@
               </div>
               <div *ngIf="getWeekPlan(2, workgroupPlan.escortManagerPlans)">
                 <div class="action-circle" *ngIf="getWeekPlan(2, workgroupPlan.escortManagerPlans).fact != ''" style="background-color: #D5E3EB"></div>
+              </div>
+              <div *ngIf="!getWeekPlan(2, workgroupPlan.escortManagerPlans)">
+                <div class="action-circle" style="background-color: #e5e5e5"></div>
+              </div>
+              <div *ngIf="!getWeekPlan(2, workgroupPlan.escortManagerPlans)">
+                <div class="action-circle" style="background-color: #e5e5e5"></div>
               </div>
             </td>
             <td>
@@ -79,6 +91,12 @@
               <div *ngIf="getWeekPlan(3, workgroupPlan.escortManagerPlans)">
                 <div class="action-circle" *ngIf="getWeekPlan(3, workgroupPlan.escortManagerPlans).fact != ''" style="background-color: #D5E3EB"></div>
               </div>
+              <div *ngIf="!getWeekPlan(3, workgroupPlan.escortManagerPlans)">
+                <div class="action-circle" style="background-color: #e5e5e5"></div>
+              </div>
+              <div *ngIf="!getWeekPlan(3, workgroupPlan.escortManagerPlans)">
+                <div class="action-circle" style="background-color: #e5e5e5"></div>
+              </div>
             </td>
             <td>
               <div *ngIf="getWeekPlan(4, workgroupPlan.escortManagerPlans)">
@@ -87,6 +105,12 @@
               <div *ngIf="getWeekPlan(4, workgroupPlan.escortManagerPlans)">
                 <div class="action-circle" *ngIf="getWeekPlan(4, workgroupPlan.escortManagerPlans).fact != ''" style="background-color: #D5E3EB"></div>
               </div>
+              <div *ngIf="!getWeekPlan(4, workgroupPlan.escortManagerPlans)">
+                <div class="action-circle" style="background-color: #e5e5e5"></div>
+              </div>
+              <div *ngIf="!getWeekPlan(4, workgroupPlan.escortManagerPlans)">
+                <div class="action-circle" style="background-color: #e5e5e5"></div>
+              </div>
             </td>
             <td>
               <div *ngIf="getWeekPlan(5, workgroupPlan.escortManagerPlans)">
@@ -94,6 +118,12 @@
               </div>
               <div *ngIf="getWeekPlan(5, workgroupPlan.escortManagerPlans)">
                 <div class="action-circle" *ngIf="getWeekPlan(5, workgroupPlan.escortManagerPlans).fact != ''" style="background-color: #D5E3EB"></div>
+              </div>
+              <div *ngIf="!getWeekPlan(5, workgroupPlan.escortManagerPlans)">
+                <div class="action-circle" style="background-color: #e5e5e5"></div>
+              </div>
+              <div *ngIf="!getWeekPlan(5, workgroupPlan.escortManagerPlans)">
+                <div class="action-circle" style="background-color: #e5e5e5"></div>
               </div>
             </td>
             <td colspan="5">
@@ -109,6 +139,12 @@
               <div *ngIf="getWeekPlan(1, workgroupPlan.regionalManagerPlans)">
                 <div class="action-circle" *ngIf="getWeekPlan(1, workgroupPlan.regionalManagerPlans).fact != ''" style="background-color: #D5E3EB"></div>
               </div>
+              <div *ngIf="!getWeekPlan(1, workgroupPlan.regionalManagerPlans)">
+                <div class="action-circle" style="background-color: #e5e5e5"></div>
+              </div>
+              <div *ngIf="!getWeekPlan(1, workgroupPlan.regionalManagerPlans)">
+                <div class="action-circle" style="background-color: #e5e5e5"></div>
+              </div>
             </td>
             <td>
               <div *ngIf="getWeekPlan(2, workgroupPlan.regionalManagerPlans)">
@@ -116,6 +152,12 @@
               </div>
               <div *ngIf="getWeekPlan(2, workgroupPlan.regionalManagerPlans)">
                 <div class="action-circle" *ngIf="getWeekPlan(2, workgroupPlan.regionalManagerPlans).fact != ''" style="background-color: #D5E3EB"></div>
+              </div>
+              <div *ngIf="!getWeekPlan(2, workgroupPlan.regionalManagerPlans)">
+                <div class="action-circle" style="background-color: #e5e5e5"></div>
+              </div>
+              <div *ngIf="!getWeekPlan(2, workgroupPlan.regionalManagerPlans)">
+                <div class="action-circle" style="background-color: #e5e5e5"></div>
               </div>
             </td>
             <td>
@@ -125,6 +167,12 @@
               <div *ngIf="getWeekPlan(3, workgroupPlan.regionalManagerPlans)">
                 <div class="action-circle" *ngIf="getWeekPlan(3, workgroupPlan.regionalManagerPlans).fact != ''" style="background-color: #D5E3EB"></div>
               </div>
+              <div *ngIf="!getWeekPlan(3, workgroupPlan.regionalManagerPlans)">
+                <div class="action-circle" style="background-color: #e5e5e5"></div>
+              </div>
+              <div *ngIf="!getWeekPlan(3, workgroupPlan.regionalManagerPlans)">
+                <div class="action-circle" style="background-color: #e5e5e5"></div>
+              </div>
             </td>
             <td>
               <div *ngIf="getWeekPlan(4, workgroupPlan.regionalManagerPlans)">
@@ -133,6 +181,12 @@
               <div *ngIf="getWeekPlan(4, workgroupPlan.regionalManagerPlans)">
                 <div class="action-circle" *ngIf="getWeekPlan(4, workgroupPlan.regionalManagerPlans).fact != ''" style="background-color: #D5E3EB"></div>
               </div>
+              <div *ngIf="!getWeekPlan(4, workgroupPlan.regionalManagerPlans)">
+                <div class="action-circle" style="background-color: #e5e5e5"></div>
+              </div>
+              <div *ngIf="!getWeekPlan(4, workgroupPlan.regionalManagerPlans)">
+                <div class="action-circle" style="background-color: #e5e5e5"></div>
+              </div>
             </td>
             <td>
               <div *ngIf="getWeekPlan(5, workgroupPlan.regionalManagerPlans)">
@@ -140,6 +194,12 @@
               </div>
               <div *ngIf="getWeekPlan(5, workgroupPlan.regionalManagerPlans)">
                 <div class="action-circle" *ngIf="getWeekPlan(5, workgroupPlan.regionalManagerPlans).fact != ''" style="background-color: #D5E3EB"></div>
+              </div>
+              <div *ngIf="!getWeekPlan(5, workgroupPlan.regionalManagerPlans)">
+                <div class="action-circle" style="background-color: #e5e5e5"></div>
+              </div>
+              <div *ngIf="!getWeekPlan(5, workgroupPlan.regionalManagerPlans)">
+                <div class="action-circle" style="background-color: #e5e5e5"></div>
               </div>
             </td>
             <td colspan="5">
