--- a/WebUI/ClientApp/src/app/manager-rm/clients/components/client-list/client-list.component.html
+++ b/WebUI/ClientApp/src/app/manager-rm/clients/components/client-list/client-list.component.html
@@ -4,7 +4,10 @@
     <button class="addEntity" (click)="openCreateClientForm()">+ Добавить клиента</button>
   </mat-card-header>
   <mat-card-content>
-      <table mat-table [dataSource]="clients" [trackBy]="getTrackBy">
+      <mat-paginator [pageSize]="50" [pageSizeOptions]="[50, 100, 150]">
+      </mat-paginator>
+
+      <table mat-table [dataSource]="dataSource" [trackBy]="getTrackBy">
         
           <ng-container matColumnDef="title">
             <th mat-header-cell *matHeaderCellDef>Название</th>
@@ -164,7 +167,8 @@
           <tr mat-row *matRowDef="let row; columns: displayedColumns;" (dblclick)="openEditClientForm(row)"></tr>
         </table>
 
-        
+        <mat-paginator [pageSize]="50" [pageSizeOptions]="[50, 100, 150]">
+        </mat-paginator>
   </mat-card-content>
 </mat-card>
 
