--- a/WebUI/ClientApp/src/app/admin/workgroups/components/workgroups-list/workgroups-list.component.sass
+++ b/WebUI/ClientApp/src/app/admin/workgroups/components/workgroups-list/workgroups-list.component.sass
@@ -38,7 +38,7 @@
             padding: 20px 25px
             font-size: 18px
             color: #6FACE7
-            background: #DAEDFF
+            background: #daedfe
             border-radius: 20px 20px 0px 0px
             line-height: 1.5
             span
@@ -70,7 +70,7 @@
             border-collapse: collapse
             border-radius: 0px 0px 20px 20px
             tr
-                background: #EFF5FF
+                background: #f9fdff
             th
                 padding: 5px 10px
                 font-size: 14px
@@ -83,4 +83,4 @@
             tbody
                 tr
                     &:nth-child(2n)
-                        background-color: #E2F1FF
+                        background-color: #f7fcff
