--- a/WebUI/ClientApp/src/app/admin/clients/components/client-list/client-list.component.sass
+++ b/WebUI/ClientApp/src/app/admin/clients/components/client-list/client-list.component.sass
@@ -81,3 +81,13 @@ th
 
 
 
+.filter
+    margin: 0 20px
+    text-align: right
+    input 
+        display: inline-block 
+        width: 365px
+        padding: 10px 20px
+        border: 1px solid 
+        border-radius: 99px
+        border: 1px solid #E9F3FF
