--- a/WebUI/ClientApp/src/app/admin/clients/components/client-list/client-list.component.html
+++ b/WebUI/ClientApp/src/app/admin/clients/components/client-list/client-list.component.html
@@ -5,6 +5,12 @@
   </mat-card-header>
   <mat-card-content>
 
+      <div class="filter clearfix">
+        <input (keyup)="applyFilter($event.target.value)" placeholder="Поиск">
+      </div>
+        
+
+
       <mat-paginator [pageSize]="50" [pageSizeOptions]="[50, 100, 150]">
       </mat-paginator>
 
@@ -42,9 +48,6 @@
 
           
         </table>
-
-        <mat-paginator [pageSize]="50" [pageSizeOptions]="[50, 100, 150]">
-        </mat-paginator>
         
   </mat-card-content>
 </mat-card>
