--- a/WebUI/ClientApp/src/app/manager-rm/clients/components/client-list/client-list.component.html
+++ b/WebUI/ClientApp/src/app/manager-rm/clients/components/client-list/client-list.component.html
@@ -4,8 +4,14 @@
     <button class="addEntity" (click)="openCreateClientForm()">+ Добавить клиента</button>
   </mat-card-header>
   <mat-card-content>
+
+      <div class="filter clearfix">
+        <input (keyup)="applyFilter($event.target.value)" placeholder="Поиск">
+      </div>
+
       <mat-paginator [pageSize]="50" [pageSizeOptions]="[50, 100, 150]">
       </mat-paginator>
+      
 
       <table mat-table [dataSource]="dataSource" [trackBy]="getTrackBy">
         
