--- a/WebUI/ClientApp/src/app/manager-rm/clients/components/client-list/client-list.component.sass
+++ b/WebUI/ClientApp/src/app/manager-rm/clients/components/client-list/client-list.component.sass
@@ -95,3 +95,13 @@ th
     border-radius: 60px
     max-width: 110px
 
+.filter
+    margin: 0 20px
+    text-align: right
+    input 
+        display: inline-block 
+        width: 365px
+        padding: 10px 20px
+        border: 1px solid 
+        border-radius: 99px
+        border: 1px solid #E9F3FF
